--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-swipeable": "^7.0.1",
+    "react-transition-group": "^4.4.5",
     "three": "^0.166.1",
     "three-stdlib": "^2.30.4",
     "web-vitals": "^2.1.4"
