--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 public/water.jpg
 public/waternormals.jpg
 public/glass.jpg
+src/fonts/
+public/picture1.jpg
+public/picture2.jpg
+public/picture3.jpg
+public/videos/
 
 # misc
 .DS_Store
