--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-spring": "^9.7.3",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.12",
     "three": "^0.166.1",
     "three-stdlib": "^2.30.4",
     "web-vitals": "^2.1.4"
