--- a/lake-ripple-effect/package.json
+++ b/lake-ripple-effect/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "imagine",
+  "name": "lake-ripple-effect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
-    "@react-three/drei": "^9.108.4",
-    "@react-three/fiber": "^8.16.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "exif-js": "^2.3.0",
-    "mapbox-gl": "^3.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.1",
-    "three": "^0.166.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
