finish client almost

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 
 src/fonts/
 public/picture1.jpg
+public/picture4.jpg
+public/picture5.jpg
+public/picture6.jpg
+public/picture7.jpg
+public/picture8.jpg
+public/picture9.jpg
 
 # misc
 .DS_Store
