--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "exif-js": "^2.3.0",
+    "http-proxy-middleware": "^3.0.0",
     "mapbox-gl": "^3.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
